; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/scripts/basic/extr_docproc.c_add_new_symbol.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/scripts/basic/extr_docproc.c_add_new_symbol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.symfile = type { i32, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.symfile*, i8*)* @add_new_symbol to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_new_symbol(%struct.symfile* %0, i8* %1) #0 {
  %3 = alloca %struct.symfile*, align 8
  %4 = alloca i8*, align 8
  store %struct.symfile* %0, %struct.symfile** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.symfile*, %struct.symfile** %3, align 8
  %6 = getelementptr inbounds %struct.symfile, %struct.symfile* %5, i32 0, i32 1
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %8 = load %struct.symfile*, %struct.symfile** %3, align 8
  %9 = getelementptr inbounds %struct.symfile, %struct.symfile* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = add nsw i32 %10, 1
  %12 = sext i32 %11 to i64
  %13 = mul i64 %12, 8
  %14 = trunc i64 %13 to i32
  %15 = call %struct.TYPE_3__* @realloc(%struct.TYPE_3__* %7, i32 %14)
  %16 = load %struct.symfile*, %struct.symfile** %3, align 8
  %17 = getelementptr inbounds %struct.symfile, %struct.symfile* %16, i32 0, i32 1
  store %struct.TYPE_3__* %15, %struct.TYPE_3__** %17, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = call i32 @strdup(i8* %18)
  %20 = load %struct.symfile*, %struct.symfile** %3, align 8
  %21 = getelementptr inbounds %struct.symfile, %struct.symfile* %20, i32 0, i32 1
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %21, align 8
  %23 = load %struct.symfile*, %struct.symfile** %3, align 8
  %24 = getelementptr inbounds %struct.symfile, %struct.symfile* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %24, align 8
  %27 = sext i32 %25 to i64
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i64 %27
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  store i32 %19, i32* %29, align 4
  ret void
}

declare dso_local %struct.TYPE_3__* @realloc(%struct.TYPE_3__*, i32) #1

declare dso_local i32 @strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
